[gd_scene load_steps=18 format=3 uid="uid://8n47rr4213lx"]

[ext_resource type="Script" path="res://scripts/level_menu.gd" id="1_0uvqt"]
[ext_resource type="Texture2D" uid="uid://dnnqk3ya8mdb2" path="res://assets/sky.png" id="2_ll0dm"]
[ext_resource type="FontFile" uid="uid://td4u3p8qk0fc" path="res://assets/_fonts/Oswald-VariableFont_wght.ttf" id="3_j71jg"]
[ext_resource type="Texture2D" uid="uid://bld2uboigyi7a" path="res://assets/_icons/button-close.png" id="4_plhms"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u88wa"]
texture = ExtResource("2_ll0dm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8i7k"]
bg_color = Color(0, 0.787054, 0.305812, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bo4d"]
bg_color = Color(0, 0.787054, 0.305812, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0406d"]
bg_color = Color(3.22476e-06, 0.577675, 0.216095, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp6mf"]
bg_color = Color(0.809602, 0.656992, 0.309711, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qe0s"]
bg_color = Color(0.809602, 0.656992, 0.309711, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3u05"]
bg_color = Color(0.615546, 0.490757, 0.200638, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxgen"]
bg_color = Color(0.355314, 0.355314, 0.355314, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6rsb"]
bg_color = Color(0.355314, 0.355314, 0.355314, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmuwn"]
bg_color = Color(0.252027, 0.252028, 0.252028, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4357x"]
texture = ExtResource("4_plhms")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rgx5y"]
texture = ExtResource("4_plhms")
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xcpjl"]
texture = ExtResource("4_plhms")
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
modulate_color = Color(0.641934, 0.641934, 0.641934, 1)

[node name="LevelsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uvqt")

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u88wa")

[node name="Rows" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.0
offset_top = -270.0
offset_right = 405.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Column1" type="VBoxContainer" parent="Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="Rows/Column1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_e8i7k")
theme_override_styles/hover = SubResource("StyleBoxFlat_0bo4d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0406d")
text = "1"

[node name="Button5" type="Button" parent="Rows/Column1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_cp6mf")
theme_override_styles/hover = SubResource("StyleBoxFlat_5qe0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3u05")
text = "5"

[node name="Button9" type="Button" parent="Rows/Column1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jxgen")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6rsb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmuwn")
text = "9"

[node name="Column2" type="VBoxContainer" parent="Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Button2" type="Button" parent="Rows/Column2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_e8i7k")
theme_override_styles/hover = SubResource("StyleBoxFlat_0bo4d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0406d")
text = "2"

[node name="Button6" type="Button" parent="Rows/Column2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_cp6mf")
theme_override_styles/hover = SubResource("StyleBoxFlat_5qe0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3u05")
text = "6"

[node name="Button10" type="Button" parent="Rows/Column2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jxgen")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6rsb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmuwn")
text = "10"

[node name="Column3" type="VBoxContainer" parent="Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Button3" type="Button" parent="Rows/Column3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_e8i7k")
theme_override_styles/hover = SubResource("StyleBoxFlat_0bo4d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0406d")
text = "3"

[node name="Button7" type="Button" parent="Rows/Column3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_cp6mf")
theme_override_styles/hover = SubResource("StyleBoxFlat_5qe0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3u05")
text = "7"

[node name="Button11" type="Button" parent="Rows/Column3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jxgen")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6rsb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmuwn")
text = "11"

[node name="Column4" type="VBoxContainer" parent="Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Button4" type="Button" parent="Rows/Column4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_e8i7k")
theme_override_styles/hover = SubResource("StyleBoxFlat_0bo4d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0406d")
text = "4"

[node name="Button8" type="Button" parent="Rows/Column4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_cp6mf")
theme_override_styles/hover = SubResource("StyleBoxFlat_5qe0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3u05")
text = "8"

[node name="Button12" type="Button" parent="Rows/Column4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_j71jg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_jxgen")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6rsb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmuwn")
text = "12
"

[node name="ButtonClose" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_top = 22.0
offset_right = -22.0
offset_bottom = 92.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_4357x")
theme_override_styles/hover = SubResource("StyleBoxTexture_rgx5y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xcpjl")

[connection signal="pressed" from="Rows/Column1/Button1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Rows/Column2/Button2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Rows/Column3/Button3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="ButtonClose" to="." method="_on_close_pressed"]
